--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../scss/reset.css">
+    <link rel="stylesheet" href="../scss/style.css">
+    <title>Meet the Best Hospital</title>
 </head>
 <body>
-$END$
+<header>
+    <div class="header-mobile">
+        <div class="header-mobile__menu">
+            <div class="header-mobile__logo">
+                <h3>Physionic</h3>
+            </div>
+            <div class="header-mobile__icons">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                          d="M17.1901 15.478L23.6458 21.9337C23.8727 22.1608 24.0001 22.4687 24 22.7897C23.9999 23.1107 23.8723 23.4185 23.6452 23.6455C23.4181 23.8724 23.1102 23.9998 22.7892 23.9997C22.4682 23.9995 22.1604 23.8719 21.9335 23.6448L15.4778 17.1892C13.5479 18.6839 11.1211 19.3873 8.69104 19.1563C6.26097 18.9253 4.01018 17.7772 2.39656 15.9455C0.782936 14.1139 -0.0723147 11.7364 0.00479537 9.29657C0.0819054 6.85677 1.08558 4.53797 2.81165 2.8119C4.53771 1.08584 6.85651 0.082161 9.29632 0.00505095C11.7361 -0.0720591 14.1137 0.783191 15.9453 2.39682C17.7769 4.01044 18.925 6.26123 19.156 8.6913C19.387 11.1214 18.6836 13.5482 17.1889 15.478H17.1901ZM9.60045 16.7992C11.5099 16.7992 13.3412 16.0406 14.6914 14.6904C16.0416 13.3402 16.8001 11.509 16.8001 9.5995C16.8001 7.69003 16.0416 5.85877 14.6914 4.50857C13.3412 3.15837 11.5099 2.39984 9.60045 2.39984C7.69098 2.39984 5.85971 3.15837 4.50951 4.50857C3.15932 5.85877 2.40078 7.69003 2.40078 9.5995C2.40078 11.509 3.15932 13.3402 4.50951 14.6904C5.85971 16.0406 7.69098 16.7992 9.60045 16.7992Z"
+                          fill="#737373"/>
+                </svg>
+
+                <svg width="24" height="23" viewBox="0 0 24 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_1579:849)">
+                        <path d="M7.99999 22.4002C8.88365 22.4002 9.59999 21.6838 9.59999 20.8002C9.59999 19.9165 8.88365 19.2002 7.99999 19.2002C7.11634 19.2002 6.39999 19.9165 6.39999 20.8002C6.39999 21.6838 7.11634 22.4002 7.99999 22.4002Z"
+                              fill="#737373"/>
+                        <path d="M19.2 22.4002C20.0837 22.4002 20.8 21.6838 20.8 20.8002C20.8 19.9165 20.0837 19.2002 19.2 19.2002C18.3163 19.2002 17.6 19.9165 17.6 20.8002C17.6 21.6838 18.3163 22.4002 19.2 22.4002Z"
+                              fill="#737373"/>
+                        <path d="M22.4 4.00016H4.656L4 0.640163C3.9626 0.456742 3.86206 0.292245 3.71589 0.175305C3.56971 0.0583653 3.38716 -0.00361159 3.2 0.000162751H0V1.60016H2.544L5.6 16.9602C5.6374 17.1436 5.73794 17.3081 5.88411 17.425C6.03029 17.542 6.21284 17.6039 6.4 17.6002H20.8V16.0002H7.056L6.4 12.8002H20.8C20.9849 12.8047 21.1657 12.745 21.3116 12.6312C21.4574 12.5174 21.5594 12.3566 21.6 12.1762L23.2 4.97616C23.2268 4.85746 23.2262 4.73421 23.1982 4.61579C23.1702 4.49737 23.1155 4.38689 23.0384 4.29278C22.9612 4.19867 22.8636 4.12339 22.753 4.07268C22.6424 4.02198 22.5217 3.99717 22.4 4.00016ZM20.16 11.2002H6.096L4.976 5.60016H21.4L20.16 11.2002Z"
+                              fill="#737373"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_1579:849">
+                            <rect width="24" height="22.4002" fill="white"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+
+
+                <div id="toggle-burger-menu" class="header-mobile__burger_menu ">
+                    <span></span>
+                </div>
+            </div>
+
+        </div>
+        <div class="toggle-burger-menu">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
+
+<div class="header-content">
+
+    <div class="header__inform">
+        <div class="header__title">
+            <h1>Meet the Best
+                <br>Hospital</h1>
+            <h4>We know how large objects <br>
+                will act, but things on a <br> small scale.</h4>
+        </div>
+        <button class="button__round">Get Quote Now</button>
+        <button class="button__round">Learn More</button>
+    </div>
+
+    <div class="header__form">
+
+        <h3>Book Appointment</h3>
+        <form action="">
+
+            <label for="inputName">Name *</label>
+            <input id="inputName" type="text" placeholder="Full Name * ">
+
+            <label for="inputEmail">Email address *</label>
+            <input id="inputEmail" type="email" placeholder="example@gmail.com">
+
+
+            <label for="departement">Departement *</label>
+            <select id="departement" placeholder="12" name="departament">
+                <option value="" disabled selected hidden>Please Select</option>
+                <option value="Lviv">Lviv</option>
+                <option value="Kiev">Kiev</option>
+                <option value="Rivne">Rivne</option>
+                <option value="Odesa">Odesa</option>
+            </select>
+
+            <label for="time">Time *</label>
+
+            <select id="time" name="departament">
+
+                <option value="13:00">13:00</option>
+                <option value="9:00">9:00</option>
+                <option value="20:00">20:00</option>
+                <option value="2:00">2:00</option>
+            </select>
+
+            <button class="button__square">
+                Book Appointment
+            </button>
+        </form>
+    </div>
+
+</div>
+
+<section class="leading-Medicine">
+    <div class="leading-Medicine_title">
+        <h2>Leading
+            <br>Medicine</h2>
+        <p class="titles-paragraph">
+            Problems trying to resolve
+            <br> the conflict between the
+            <br> two major realms of Classical
+            <br> physics: Newtonian mechanics
+        </p>
+    </div>
+    <div class="leading-Medicine__cards">
+        <div class="leading-Medicine_card">
+            <div class="leading-Medicine_card-title">
+                <div class="leading-Medicine_card-icon">
+                    <svg width="33" height="27" viewBox="0 0 33 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M26.6818 13.1765H23.7727V17.5686H19.4091V20.4967H26.6818V13.1765ZM9.22727 8.78432H13.5909V5.85621H6.31818V13.1765H9.22727V8.78432ZM29.5909 0H3.40909C2.63755 0 1.89761 0.308496 1.35205 0.857622C0.806493 1.40675 0.5 2.15152 0.5 2.92811V23.4249C0.5 24.2014 0.806493 24.9462 1.35205 25.4953C1.89761 26.0445 2.63755 26.353 3.40909 26.353H29.5909C30.3624 26.353 31.1024 26.0445 31.6479 25.4953C32.1935 24.9462 32.5 24.2014 32.5 23.4249V2.92811C32.5 2.15152 32.1935 1.40675 31.6479 0.857622C31.1024 0.308496 30.3624 0 29.5909 0ZM29.5909 23.4249H3.40909V2.92811H29.5909V23.4249Z" fill="#23A6F0"/>
+                    </svg>
+                </div>
+                    <h5>Emergency Case
+                    </h5>
+            </div>
+            <div class="leading-Medicine_card-items">
+                <h6>- The best products start
+                    <br>  with Figma</h6>
+                <h6>- Design with real data</h6>
+                <h6>- Lightning fast prototyping</h6>
+                <h6>- Fastest way to organize</h6>
+                <h6>- Work at the speed of thought.</h6>
+                <a href="#">Learn More</a>
+            </div>
+        </div>
+    </div>
+    </div>
+</section>
+
+<script src="../js/main.js"></script>
 </body>
 </html>
